// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading> renders 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {breadcrumbs} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#707070",
              "marginRight": 4,
            },
          ]
        }
      >
        Turismo ·
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#707070",
              "marginRight": 4,
            },
          ]
        }
      >
        Gran Bretaña ·
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#707070",
              "marginRight": 4,
            },
          ]
        }
      >
        Inglaterra ·
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#707070",
              "marginRight": 4,
            },
          ]
        }
      >
        Londres
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Heading> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "color": "#a66ecc",
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {column} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={Object {}}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ☆
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
         4.5/5
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
         (12 valoraciones)
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "minHeight": 20,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
        128
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
         colaborators
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/8",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Array [
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                  Array [
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                    false,
                    Object {
                      "borderRadius": 10,
                      "height": 20,
                      "width": 20,
                    },
                    Object {
                      "marginLeft": 4,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/16",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Array [
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                  Array [
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                    false,
                    Object {
                      "borderRadius": 10,
                      "height": 20,
                      "width": 20,
                    },
                    Object {
                      "marginLeft": 4,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/32",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Array [
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                  Array [
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                    false,
                    Object {
                      "borderRadius": 10,
                      "height": 20,
                      "width": 20,
                    },
                    Object {
                      "marginLeft": 4,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Heading> when {contributors} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
        128
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
         colaborators
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/8",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Array [
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                  Array [
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                    false,
                    Object {
                      "borderRadius": 10,
                      "height": 20,
                      "width": 20,
                    },
                    Object {
                      "marginLeft": 4,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/16",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Array [
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                  Array [
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                    false,
                    Object {
                      "borderRadius": 10,
                      "height": 20,
                      "width": 20,
                    },
                    Object {
                      "marginLeft": 4,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/32",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Array [
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                  Array [
                    Object {
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                    false,
                    Object {
                      "borderRadius": 10,
                      "height": 20,
                      "width": 20,
                    },
                    Object {
                      "marginLeft": 4,
                    },
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Heading> when {rating} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 8,
            },
          ]
        }
      >
        ☆
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
         4.5/5
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            false,
            Object {},
          ]
        }
      >
         (12 valoraciones)
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {title} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -2.5,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 8,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;
